some changes, added ms translation